--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rishitha's Roadmap App</title>
+  <!-- <title>Rishitha's Roadmap App</title> -->
+  <title>Edu Map</title>
 
   <style>
     body {
