--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <title>Rishitha's Roadmap App</title> -->
-  <title>Edu Map</title>
+  <title>Edu Map Webpage</title>
 
   <style>
     body {
