latest project updated

--- a/app/index.html
+++ b/app/index.html
@@ -688,9 +688,9 @@
                     </div>
                     <p class="project-date">Sept. 2025 - Present</p>
                     <ul>
-                        <li>Built an automated CI/CD pipeline with Jenkins triggered via GitHub webhooks to build, test, and containerize my personal portfolio web application</li>
-                        <li>Pushed Docker images to AWS ECR and provisioned infrastructure using Terraform including EC2, Security groups, and IAM roles</li>
-                        <li>Deployed containerized application on EC2 instances with automated pull from ECR, achieving repeatable and version-controlled deployments</li>
+                        <li>Built a fully automated CI/CD pipeline with Jenkins to build Docker images, push to ECR, and deploy to ECS Fargate with zero-downtime rolling updates.</li>
+                        <li>Provisioned AWS infrastructure using Terraform including VPC with multi-AZ architecture, Application Load Balancer, ECS Fargate cluster, IAM roles, CloudWatch logging, and S3 remote state backend.</li>
+                        <li>Objective of the project was to implement a production-grade CI/CD pipeline for containerized application deployment on AWS serverless infrastructure.</li>
                     </ul>
                     <div class="tech-tags">
                         <span class="tech-tag">Git & GitHub</span>
@@ -698,7 +698,7 @@
                         <span class="tech-tag">Docker</span>
                         <span class="tech-tag">Terraform</span>
                         <span class="tech-tag">AWS</span>
-                        <span class="tech-tag">Prometheus</span>
+                        <span class="tech-tag">Prometheus</span>    
                     </div>
                 </div>
 
@@ -833,7 +833,7 @@
         </section>
     </div>
 
-    
+
     <footer>
         <div class="container">
             <p>&copy; 2025 Nikhil Gelli. All rights reserved.</p>
